[gd_scene load_steps=4 format=2]

[ext_resource path="res://main_scenes/game_scene.gd" type="Script" id=1]
[ext_resource path="res://objects/audio/driving_engine_sound.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/audio/intro_message.tscn" type="PackedScene" id=3]

[node name="node_toplevel" type="Node2D"]
script = ExtResource( 1 )

[node name="label_hello" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
HELLO WELCOME TO THE GAME
"

[node name="slider_speed" type="VSlider" parent="."]
margin_left = 946.0
margin_top = 16.0
margin_right = 1013.0
margin_bottom = 201.0
tick_count = 100

[node name="label_speed" type="Label" parent="slider_speed"]
margin_left = -22.0
margin_top = 10.0
margin_right = 18.0
margin_bottom = 24.0
text = "FAST








SLOW"

[node name="driving_engine_sound" parent="." instance=ExtResource( 2 )]

[node name="intro_message" parent="." instance=ExtResource( 3 )]
[connection signal="value_changed" from="slider_speed" to="." method="_on_slider_speed_value_changed"]
[connection signal="clip_playback_complete" from="intro_message" to="." method="_on_intro_message_clip_playback_complete"]
